samples/_failures_safe/1761040511_690ec8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_818e65a1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_818e65a1.c:157:15: error: expected ‘;’ at end of input
  157 |         tokens
      |               ^
      |               ;
./samples/SAFE/__tmp_818e65a1.c:157:9: error: expected declaration or statement at end of input
  157 |         tokens
      |         ^~~~~~
./samples/SAFE/__tmp_818e65a1.c:157:9: error: expected declaration or statement at end of input
